fix lander scroll on mobile

--- a/src/components/modal/v2/styles/components/_content.scss
+++ b/src/components/modal/v2/styles/components/_content.scss
@@ -24,6 +24,12 @@
         display: flex;
         flex-direction: column;
         padding: 0 20px;
+
+        @include lander {
+            @include mobile {
+                padding: 0px 20px 100px 20px;
+            }
+        }
     }
 
     .content__row {
@@ -40,6 +46,14 @@
                 @include tablet {
                     padding-left: 65px;
                     padding-right: 65px;
+                }
+            }
+
+            @include lander {
+                &.no-interest {
+                    @include mobile {
+                        padding-top: 0rem;
+                    }
                 }
             }
 
@@ -74,6 +88,14 @@
                 @include tablet {
                     align-items: center;
                     width: 100%;
+                }
+
+                @include lander {
+                    &.no-interest {
+                        @include mobile {
+                            padding-top: 1.5rem;
+                        }
+                    }
                 }
             }
 
