--- a/src/components/modal/v2/styles/components/_modal-frame.scss
+++ b/src/components/modal/v2/styles/components/_modal-frame.scss
@@ -6,4 +6,10 @@
     left: 0;
     width: 100%;
     height: 100%;
+
+    @include lander {
+        @include mobile {
+            position: fixed;
+        }
+    }
 }
