--- a/src/components/modal/v2/styles/components/_product-list-link.scss
+++ b/src/components/modal/v2/styles/components/_product-list-link.scss
@@ -6,6 +6,7 @@
     text-decoration: underline;
     color: $light-blue;
     font-family: $paypal-open-bold;
+    font-size: 14px;
     cursor: pointer;
     padding: 0;
 
